# chat-clone

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: .env  .env.example  Dockerfile  alembic.ini  auth.py  database.py  entrypoint.sh  main.py  models.py  pyproject.toml  schemas.py  wait_for_db.py  websocket_manager.py
backend/alembic/: env.py
backend/alembic/versions/: 3c2f7741b62d_adding_password_to_user.py  84fe83e3e633_add_messages_and_conversations.py  df74dd812dc5_removing_username_from_user.py  e2aac5c0aaaa_initial_migration_user_table.py
chat-clone-app/: Dockerfile  app.json  package-lock.json  package.json
chat-clone-app/app/: _layout.tsx  global.css  index.tsx  login.tsx  new-conversation.tsx
chat-clone-app/app/(tabs)/: index.tsx
chat-clone-app/app/conversation/: [id].tsx
chat-clone-app/contexts/: AuthContext.tsx
chat-clone-app/hooks/: useWebSocket.ts
chat-clone-app/services/: api.ts  websocket.ts
